download links added, responsiveness fixed, new css files created

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Python Programs</title>
     <link rel="stylesheet" href="./css/general.css">
     <link rel="stylesheet" href="./css/home.css">
+    <style src="./app.js"></style>
 </head>
 
 <body>
@@ -17,22 +18,21 @@
             <ul class="header__menu">
                 <li><a class="header__list active" href="./index.html">Home</a></li>
                 <li><a class="header__list" href="./labtasks.html">Lab Tasks</a></li>
-                <li><a class="header__list" href="#projects">Projects</a></li>
-                <li><a class="header__list" href="#assignments">Assignments</a></li>
+                <li><a class="header__list" href="./projects.html">Projects</a></li>
+                <li><a class="header__list" href="./contact.html">Contact</a></li>
             </ul>
             <ul class="header__hamburger">
                 <li><img src="./hamburger-icon.png"></li>
                 <ul class="header__mobilemenu">
-                    <img class="header__cross" src="./cross-icon.png">
                     <li><a class="header__mobilelist active" href="./index.html">Home</a></li>
                     <li><a class="header__mobilelist" href="./labtasks.html">Lab Tasks</a></li>
-                    <li><a class="header__mobilelist" href="#projects">Projects</a></li>
-                    <li><a class="header__mobilelist" href="#assignments">Assignments</a></li>
+                    <li><a class="header__mobilelist" href="./projects.html">Projects</a></li>
+                    <li><a class="header__mobilelist" href="./contact.html">Contact</a></li>
                 </ul>
             </ul>
         </nav>
 
-        <div class="header__content">
+        <div class="header__content container">
             <h1 class="header__title">Learn <span>Python</span></h1>
             <p class="header__subtitle">Learn the basics of python by using the exercises and labtasks.</p>
             <a class="btn" href="./labtasks.html">Get Started</a>
