--- a/labtasks.html
+++ b/labtasks.html
@@ -14,12 +14,18 @@
             <h2 class="header__logo"><a href="./index.html"><span>Python</span> Programs</a></h2>
             <ul class="header__menu">
                 <li><a class="header__list" href="./index.html">Home</a></li>
-                <li><a class="header__list active" href="#labtasks">Lab Tasks</a></li>
-                <li><a class="header__list" href="#projects">Projects</a></li>
-                <li><a class="header__list" href="#assignments">Assignments</a></li>
+                <li><a class="header__list active" href="./labtasks.html">Lab Tasks</a></li>
+                <li><a class="header__list" href="./projects.html">Projects</a></li>
+                <li><a class="header__list" href="./contact.html">Contact</a></li>
             </ul>
             <ul class="header__hamburger">
                 <li><img src="./hamburger-icon.png"></li>
+                <ul class="header__mobilemenu">
+                    <li><a class="header__mobilelist" href="./index.html">Home</a></li>
+                    <li><a class="header__mobilelist active" href="./labtasks.html">Lab Tasks</a></li>
+                    <li><a class="header__mobilelist" href="./projects.html">Projects</a></li>
+                    <li><a class="header__mobilelist" href="./contact.html">Contact</a></li>
+                </ul>
             </ul>
         </nav>
 
@@ -27,42 +33,42 @@
             <div class="cards">
                 <div class="card lab-1">
                     <h2 class="task">Lab Task 1</h2>
-                    <div class="btn"><a href="#">Download</a></div>
+                    <div class="btn"><a href="./Labtasks/Lab 1.docx" download>Download</a></div>
                 </div>
 
                 <div class="card lab-2">
                     <h2 class="task">Lab Task 2</h2>
-                    <div class="btn"><a href="#">Download</a></div>
+                    <div class="btn"><a href="./Labtasks/Lab 2.docx" download>Download</a></div>
                 </div>
 
                 <div class="card lab-3">
                     <h2 class="task">Lab Task 3</h2>
-                    <div class="btn"><a href="#">Download</a></div>
+                    <div class="btn"><a href="./Labtasks/Lab 3.docx" download>Download</a></div>
                 </div>
 
                 <div class="card lab-4">
                     <h2 class="task">Lab Task 4</h2>
-                    <div class="btn"><a href="#">Download</a></div>
+                    <div class="btn"><a href="./Labtasks/Lab 4.docx" download>Download</a></div>
                 </div>
 
                 <div class="card lab-5">
                     <h2 class="task">Lab Task 5</h2>
-                    <div class="btn"><a href="#">Download</a></div>
+                    <div class="btn"><a href="./Labtasks/Lab 5.docx" download>Download</a></div>
                 </div>
 
                 <div class="card lab-6">
                     <h2 class="task">Lab Task 6</h2>
-                    <div class="btn"><a href="#">Download</a></div>
+                    <div class="btn"><a href="./Labtasks/Lab 6.docx" download>Download</a></div>
                 </div>
 
                 <div class="card lab-7">
                     <h2 class="task">Lab Task 7</h2>
-                    <div class="btn"><a href="#">Download</a></div>
+                    <div class="btn"><a href="./Labtasks/Lab 7.docx" download>Download</a></div>
                 </div>
 
                 <div class="card lab-8">
                     <h2 class="task">Lab Manual</h2>
-                    <div class="btn"><a href="#">Download</a></div>
+                    <div class="btn"><a href="./Labtasks/Lab_Manual_DSA.docx" download>Download</a></div>
                 </div>
             </div>
         </div>
